fix map not showing on entire screen, underflow fix for navcard, conditional button hiding

--- a/src/components/pages/Map/Map.css
+++ b/src/components/pages/Map/Map.css
@@ -1,5 +1,5 @@
 #map {
-    height: 60vw;
+    height: 100vh;
     border-radius: 1.5rem;
     margin: 0 auto;
 }
